--- a/app/views/swagger_ui/_swagger_ui.html.erb
+++ b/app/views/swagger_ui/_swagger_ui.html.erb
@@ -1,37 +1,88 @@
 <script type="text/javascript">
-  $(function () {
-    window.swaggerUi = new SwaggerUi({
-      url: '<%= discovery_url %>',
-      <% if defined?(api_key) %>
-        apiKey: '<%= api_key %>',
-      <% end %>
-      dom_id:"swagger-ui-container",
-      supportHeaderParams: false,
-      supportedSubmitMethods: ['get', 'post', 'put', 'delete', 'patch'],
-      onComplete: function(swaggerApi, swaggerUi){
-        if(console) {
-              console.log("Loaded SwaggerUI")
-              console.log(swaggerApi);
-              console.log(swaggerUi);
-          }
-        $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
-      },
-      onFailure: function(data) {
-        if(console) {
-              console.log("Unable to Load SwaggerUI");
-              console.log(data);
-          }
-      },
-      docExpansion: "none"
+    $(function () {
+        var url = window.location.search.match(/url=([^&]+)/);
+        if (url && url.length > 1) {
+            url = decodeURIComponent(url[1]);
+        } else {
+            url = <%= :url %>;
+        }
+
+        // Pre load translate...
+        if(window.SwaggerTranslator) {
+            window.SwaggerTranslator.translate();
+        }
+        window.swaggerUi = new SwaggerUi({
+            url: url,
+            dom_id: "swagger-ui-container",
+            supportedSubmitMethods: ['get', 'post', 'put', 'delete', 'patch'],
+            onComplete: function(swaggerApi, swaggerUi){
+                if(typeof initOAuth == "function") {
+                    initOAuth({
+                        clientId: "your-client-id",
+                        clientSecret: "your-client-secret",
+                        realm: "your-realms",
+                        appName: "your-app-name",
+                        scopeSeparator: ","
+                    });
+                }
+
+                if(window.SwaggerTranslator) {
+                    window.SwaggerTranslator.translate();
+                }
+
+                $('pre code').each(function(i, e) {
+                    hljs.highlightBlock(e)
+                });
+
+                addApiKeyAuthorization();
+            },
+            onFailure: function(data) {
+                log("Unable to Load SwaggerUI");
+            },
+            docExpansion: "none",
+            apisSorter: "alpha",
+            showRequestHeaders: false
+        });
+
+        function addApiKeyAuthorization(){
+            var key = encodeURIComponent($('#input_apiKey')[0].value);
+            if(key && key.trim() != "") {
+                var apiKeyAuth = new SwaggerClient.ApiKeyAuthorization("api_key", key, "query");
+                window.swaggerUi.api.clientAuthorizations.add("api_key", apiKeyAuth);
+                log("added key " + key);
+            }
+        }
+
+        $('#input_apiKey').change(addApiKeyAuthorization);
+
+        // if you have an apiKey you would like to pre-populate on the page for demonstration purposes...
+        /*
+         var apiKey = "myApiKeyXXXX123456789";
+         $('#input_apiKey').val(apiKey);
+         */
+
+        window.swaggerUi.load();
+
+        function log() {
+            if ('console' in window) {
+                console.log.apply(console, arguments);
+            }
+        }
     });
-
-    window.swaggerUi.load();
-  });
-
 </script>
 
-<div id="message-bar" class="swagger-ui-wrap">
-    &nbsp;
+<body class="swagger-section">
+<div id='header'>
+  <div class="swagger-ui-wrap">
+    <a id="logo" href="<%= :url %>"><%= :title %></a>
+    <form id='api_selector'>
+      <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
+      <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
+      <div class='input'><a id="explore" href="#" data-sw-translate>Explore</a></div>
+    </form>
+  </div>
 </div>
 
+<div id="message-bar" class="swagger-ui-wrap" data-sw-translate>&nbsp;</div>
 <div id="swagger-ui-container" class="swagger-ui-wrap"></div>
+
