--- a/app/views/swagger/_swagger.html.erb
+++ b/app/views/swagger/_swagger.html.erb
@@ -4,7 +4,7 @@
         if (url && url.length > 1) {
             url = decodeURIComponent(url[1]);
         } else {
-            url = <%= :url %>;
+            url = <%= url %>;
         }
 
         // Pre load translate...
@@ -74,7 +74,7 @@
 <body class="swagger-section">
 <div id='header'>
   <div class="swagger-ui-wrap">
-    <a id="logo" href="<%= :url %>"><%= :title %></a>
+    <a id="logo" href="<%= url %>"><%= title %></a>
     <form id='api_selector'>
       <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
       <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
