--- a/app/views/swagger/_swagger.html.erb
+++ b/app/views/swagger/_swagger.html.erb
@@ -4,7 +4,7 @@
         if (url && url.length > 1) {
             url = decodeURIComponent(url[1]);
         } else {
-            url = <%= url %>;
+            url = '<%= url %>';
         }
 
         // Pre load translate...
